# microtutor

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: neural_networks.json
microtutor/: app.py  cli.py  config.py  course.py  decay.py  generator.py  graph.py  graph_layout.py  history.py  model.py  planner.py  state_emitter.py  tutor.py  updates.py  viz_server.py
tests/: test_config.py  test_course.py  test_decay.py  test_graph.py  test_history.py  test_model.py  test_planner.py
