[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microtutor"
version = "0.1.0"
description = "Knowledge-state aware AI tutor using Bayesian Knowledge Tracing"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "anthropic>=0.40.0",
    "rich>=13.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["microtutor*"]

[project.scripts]
microtutor = "microtutor.cli:main"
