[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microtutor"
version = "0.1.0"
description = "Knowledge-state aware AI tutor using Bayesian Knowledge Tracing"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "anthropic>=0.40.0",
    "rich>=13.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["microtutor*"]

[project.urls]
Homepage = "https://github.com/s-mehra/microtutor"
Repository = "https://github.com/s-mehra/microtutor"

[project.scripts]
microtutor = "microtutor.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
